# hermetic-agent

./: .dockerignore  .env  .env.example  .gitignore  2.0.0  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  NOTICE  README.md  code-review.md  docker-compose.frontend.env.example  docker-compose.frontend.yml  docker-compose.image.env.example  docker-compose.image.yml  docker-compose.yml  pyproject.toml  requirements.txt  typescript
.ai/: AGENTS.md  CLAUDE.md  GEMINI.md
.github/workflows/: ci.yml  release.yml
.omo/run-continuation/: ses_17912e1d7ffeuxO9L5kV7alTx7.json  ses_18e47021bffeg15oNJbwlSmZox.json  ses_192696951ffeU53oG17uGygSjy.json
.skills/architecture-enforcement/: SKILL.md  metadata.json
.skills/code-quality/: SKILL.md
.skills/coding-conventions/: SKILL.md
.superpowers/sdd/: progress.md  task-20-final-fixes.md  task-6-report.md
bake/scenarios/: _generic.scenario.yaml  code_review.scenario.yaml  customer_service.scenario.yaml  expense_audit.scenario.yaml  flight_booking.scenario.yaml  flight_query.scenario.yaml  flight_query_v3.scenario.yaml
bake/temp/: _generic.scenario.yaml  code_review.scenario.yaml  expense_audit.scenario.yaml
docker/: Dockerfile.frontend  Dockerfile.openagent  Dockerfile.opencode-sandbox  admin_server.py  ask_user.py  entrypoint.sh  frontend-entrypoint.sh  nginx.frontend.conf  openapi.json  read_skill.py  render_config.py
docker/frontend/: Dockerfile  nginx.conf
docker/hermetic-agent/: Dockerfile
docker/opencode/: Dockerfile
docs/: BUILD.md  P7_FINAL_REPORT.md  agent-scheduler-proposal-review-20260529.md  agent-scheduler-proposal-review.md  agent-scheduler-proposal.html  agent-scheduler-proposal.md  api.md  architecture-and-flow.md  architecture.md  core-skill-boundary.md  deploy.md  dialogue_flow.md  dialogue_flow.puml  dual-sdk-architecture.md  frontend-backend-integration.md  hermetic-agent-open-source-evolution-plan.md  open-source-evolution-plan.md  openapi.json  opencode-integration.md  postgres-persistence-plan.md  quickstart.md  session-ses_1694.md  skills-development-guide.md  travel-agent-demo-question-bank.md  travel-agent-ppt.html  travel-agent-technical-demo-ppt.html  travel-agent-technical-demo.md  weekly-report-2026-W24.md  日志与基础设施规范.md  日志规范.md  配置文件重构总结.md
docs/agui/: 01-airplan-list.json  02-airplan-set-list.json  03-pay-list.json  agui-schema.md
docs/api/: api.md  error-message-0605-1443.md  openapi.json  opencode-todo-0605.md  query-flight-sse-response.md  query-flight_v3-sse-response-0605.md  scenarios.md
docs/db/: migrate-v1-to-v2.sql  openagent-crud-guide.md  openagent-schema.md  openagent-schema.sql
docs/design/: agent-sandbox-overview.md  agent-sandbox-plan.md  agent-sandbox-runtime-design.md  architecture-mermaid.md  architecture-plantuml.puml  book-flight-hitl-design.md  conversation-flow-diagrams.md  integrated-orchestration-plan.md  opencode-skill-and-workspace-constraint.md  scenario-routing-proposal.md  scenario-skill-walkthrough.md  外部日志采集平台接入指南.md
docs/designs/: 2026-06-30-asset-registry-plan-2.md  2026-06-30-asset-registry-plan-3.md  2026-06-30-asset-registry-plan.md  2026-06-30-asset-registry-tables.md
docs/dev-logs/: 2026-07-03-asset-registry-and-work-trace.md  README.md
docs/research/: mcporter-integration-research-20260612.md
docs/skill/: book-flight-skill.md
docs/temp/: chat-res-202606230913.json  chat-response-06181741.json  chat-response-202606180912.md  chat-response-bad-case-202606091416.md  chat-response-bad-case-202606091451.md  chat-response-bad-case-202606091515.md  logon.md  temp-0608.md  temp.md
docs/业务/: fh-travel-busi-international-api.md  鹤芯 AI 订票标准流程.md
frontend/: .dockerignore  .env.example  .gitignore  .npmrc  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx
relate_project/: travel-agent-ppt.html
scripts/: check_unified_chat_entry.py  ci_check.py  export_openapi.py  verify_opencode_config.py
src/hermetic_agent/: __init__.py  main.py  skill_cli.py  streaming.py
src/openagent/: __init__.py  main.py  streaming.py
tests/: __init__.py  conftest.py  test_actor_context_middleware.py  test_agent_pool.py  test_agent_repo_crud.py  test_agent_resolver_resolves_components.py  test_agent_service_crud.py  test_agents_controller_endpoint.py  test_ask_user_card_intercept.py  test_ask_user_script.py  test_asset_renderer_renders_system_prompt.py  test_auip_cards.py  test_auip_events.py  test_auip_flight_card.py  test_auip_flight_query.py  test_auip_renderer_protocol.py  test_auip_skill_compiler.py  test_auip_smoke.py  test_auth_controller.py  test_chat_request_extra_opencode_mcp.py  test_chat_stream_integration.py  test_command_repo_crud.py  test_command_service_crud.py  test_commands_controller_endpoint.py  test_configure_logging.py  test_e2e_error_codes.py  test_e2e_flight_booking.py  test_e2e_quality_gates.py  test_e2e_scenarios.py  test_injector_adapter_into_chat.py  test_integration_smoke.py  test_launcher.py  test_launcher_smoke.py  test_llm_payload.py  test_log_platform_dto.py  test_log_platform_log_compress.py  test_log_platform_log_context.py  test_log_platform_log_middleware.py  test_log_platform_loggers.py  test_log_platform_object_log_writer.py  (+63 more)
tests/store/: conftest.py  test_e2e_lifecycle.py  test_memory_repo.py  test_scenario_service.py  test_session_repo_mysql.py
(+701 files in other folders)
