[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermetic-agent"
version = "0.1.0"
description = "General-purpose Agent scheduling framework built on opencode SDK"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "hermetic-agent Authors" },
]
keywords = ["agent", "opencode", "scheduler", "mcp", "framework"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "sanic>=24.0.0",
    "sanic-cors>=2.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
    "rich>=13.7.0",
    "opencode-ai>=0.1.0a0",
    "asyncpg>=0.29.0",
    "asyncmy>=0.2.10",
    "pymysql>=1.1.0",
    "tortoise-orm[asyncmy]>=0.21.0",
    "sanic-ext>=24.0.0",
    "redis>=5.0.0",
    "cryptography>=41.0.0",
    "nacos-sdk-python>=3.0.0",
    "minio>=7.2.0",
] 

[project.optional-dependencies]
claude = [
    "claude-agent-sdk @ git+https://github.com/anthropics/claude-agent-sdk-python@v0.2.87",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
hermetic-agent = "hermetic_agent.main:main"
hermetic-skill = "hermetic_agent.skill_cli:main"

[project.urls]
Homepage = "https://github.com/lyzsniper/hermetic-agent"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
